docker/my-web-game/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: kjh
    labels:
        app: my-web-game
        tier: backend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: my-web-game
            tier: backend
    template:
        metadata:
            labels:
                app: my-web-game
                tier: backend
        spec:
            imagePullSecrets:
                - name: kjh-repo
            containers:
                - name: backend
                  image: kc-sfacspace.kr-central-2.kcr.dev/kjh-repo/backend:latest
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    namespace: kjh
spec:
    selector:
        app: my-web-game
        tier: backend
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    type: ClusterIP
