docker/my-web-game/k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-deployment
    namespace: kjh
    labels:
        app: my-web-game
        tier: database
spec:
    replicas: 1
    selector:
        matchLabels:
            app: my-web-game
            tier: database
    template:
        metadata:
            labels:
                app: my-web-game
                tier: database
        spec:
            containers:
                - name: mongodb
                  image: mongo:4.4
                  ports:
                      - containerPort: 27017
                  volumeMounts:
                      - name: mongo-data
                        mountPath: /data/db
            volumes:
                - name: mongo-data
                  emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb-service
    namespace: kjh
spec:
    selector:
        app: my-web-game
        tier: database
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
    type: ClusterIP
