docker/my-web-game/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: kjh
    annotations:
        nginx.ingress.kubernetes.io/enable-websocket: "true"
        nginx.org/websocket-services: "backend-service"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
        nginx.ingress.kubernetes.io/proxy-set-headers: |
            Upgrade: $http_upgrade
            Connection: "upgrade"
spec:
    ingressClassName: nginx
    rules:
        - host: my-web-game.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 80
                  - path: /socket.io
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 3000
                  - path: /kjh
                    pathType: Prefix
                    backend:
                        service:
                            name: io-game-service
                            port:
                                number: 3000
